# pdf-sign

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  package.json  pdf-sign.rs  renovate.json  rustfmt.toml
.cargo/: config.toml
.github/: skopeo-policy.json
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  commands.rs  json.rs  main.rs  sign.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: digest.rs  pdf.rs  suffix.rs  types.rs
crates/gpg/: Cargo.toml
crates/gpg/src/: challenge.rs  keybox.rs  lib.rs  sign.rs  verify.rs
crates/gpg/tests/: challenge_response.rs
crates/sigstore/: Cargo.toml
crates/sigstore/src/: sign.rs  verify.rs
crates/wasm/: .gitignore  Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
nix/: checks.nix  git-hooks.nix  package.nix  shell.nix  wasm.nix
