[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gpg",
    "crates/sigstore",
    "crates/cli",
    "crates/wasm",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Mykhailo Marynenko <mykhailo@0x77.dev>"]
repository = "https://github.com/0x77dev/pdf-sign"

[workspace.dependencies]
# Internal crates
pdf-sign-core = { path = "crates/core" }
pdf-sign-gpg = { path = "crates/gpg", default-features = false }
pdf-sign-sigstore = { path = "crates/sigstore", default-features = false }

# Core dependencies
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bilrost = "0.1014.1"
bilrost-derive = "0.1014.1"

# Hashing
sha2 = "0.11"
base64 = "0.22.1"
getrandom = "0.4"
chrono = "0.4.44"

# OpenPGP (sequoia)
sequoia-openpgp = { version = "2.2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
sequoia-gpg-agent = "0.6"

# Sigstore dependencies
sigstore = { version = "0.13", default-features = false }
sigstore_protobuf_specs = "0.5"
x509-cert = "0.2"
const-oid = { version = "0.9", features = ["db"] }
openidconnect = "4.0.1"
webbrowser = "1.2"
regex = "1.12"

# CLI dependencies
clap = { version = "4.6", features = ["derive"] }
console = "0.16.3"
indicatif = "0.18.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Async runtime
tokio = { version = "1.50", default-features = false }

# WASM dependencies
wasm-bindgen = "0.2.114"
tsify = "0.5.6"
wasm-bindgen-futures = "0.4.64"
wasm-bindgen-test = "0.3.64"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
