[package]
name = "pdf-sign-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pdf-sign"
path = "src/main.rs"

[dependencies]
pdf-sign-core.workspace = true
pdf-sign-gpg = { workspace = true, features = ["native", "challenge"] }
pdf-sign-sigstore = { workspace = true, features = ["native"] }
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
console.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
