[package]
name = "pdf-sign-sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
native = []
wasm = []

[dependencies]
pdf-sign-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
openidconnect.workspace = true
x509-cert.workspace = true
const-oid.workspace = true
sigstore_protobuf_specs.workspace = true
regex.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sigstore = { workspace = true, features = ["bundle", "sign", "verify", "fulcio", "rekor", "oauth", "sigstore-trust-root", "rustls-tls", "rustls-tls-native-roots"] }
tokio = { workspace = true, features = ["full"] }
webbrowser.workspace = true

