[package]
name = "pdf-sign-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings for pdf-sign"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Keep the default WASM build free of native/C crypto dependencies.
# Enable `sigstore` explicitly if/when a WASM-compatible crypto backend is available.
default = []
sigstore = ["dep:pdf-sign-sigstore"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
# binaryen's `wasm-opt -O` currently rejects some WASM bulk-memory ops emitted by rustc.
# Disabling wasm-opt keeps the build reproducible in Nix and avoids invalid output.
wasm-opt = false

[dependencies]
pdf-sign-core.workspace = true
pdf-sign-gpg = { workspace = true, features = ["challenge"] }
pdf-sign-sigstore = { workspace = true, optional = true }
wasm-bindgen.workspace = true
tsify.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
anyhow.workspace = true
base64.workspace = true
sequoia-openpgp.workspace = true
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
